# xbox-hd-plus-app

./: .gitignore  .gitmodules  CMakeLists.txt  Makefile  Makefile.nxdk  README.md
assets/: UserManualQR.c  Xbox_A.c  Xbox_B.c  Xbox_B2_32.c  Xbox_B2_50.c  Xbox_B_50.c  Xbox_Dpad.c  Xbox_X.c  Xbox_Y.c
include/: input_test.h  lv_conf.h
resources/: firmware.xbe
scripts/: generate_contributors.py
src/: App.cpp  App.h  Assets.h  Downloader.cpp  Downloader.h  EEPROM.cpp  EEPROM.h  FatalError.cpp  FatalError.h  Loader.cpp  Loader.h  Network.cpp  Network.h  Scene.cpp  Scene.h  System.h  Update.cpp  Update.h  Version.cpp  Version.h  XboxConfig.cpp  XboxConfig.h  main.cpp
src/lvgl-extra/: ButtonGroup.cpp  ButtonGroup.h  SwitchLabel.cpp  SwitchLabel.h  WarpObject.cpp  WarpObject.h
src/lvgl-style/: lv_theme_material_xbox.c  lv_theme_material_xbox.h
src/lwip/: http_client.c
src/scenes/: AdvanceSettings.cpp  AdvanceSettings.h  ColorCorrection.cpp  ColorCorrection.h  Credits.cpp  Credits.h  InterpolationSettings.cpp  InterpolationSettings.h  OverscanCorrection.cpp  OverscanCorrection.h  Root.cpp  Root.h  SelfTest.cpp  SelfTest.h  SystemAudioSettings.cpp  SystemAudioSettings.h  SystemSettings.cpp  SystemSettings.h  UserManual.cpp  UserManual.h  VideoSettings.cpp  VideoSettings.h
